# obs-multiview-plus

./: CMakeLists.txt  LICENSE  README.md  buildspec.json
.github/workflows/: build.yml
data/locale/: ar-SA.ini  bg-BG.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-419.ini  es-ES.ini  fi-FI.ini  fr-FR.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  ro-RO.ini  ru-RU.ini  sk-SK.ini  sv-SE.ini  th-TH.ini  tr-TR.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  zh-TW.ini
src/: eventfilter-integration-notes.cpp  multiview-event-filter.hpp  multiview-overlay.hpp  multiview-plus-manager.cpp  multiview-plus-manager.hpp  multiview-plus.hpp  plugin-main.cpp  scene-order-model.hpp
